# netbox-napalm-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: publish-pypi.yaml
changelog/: index.html
configuration/: index.html
contributing/: index.html
docs/: configuration.md  integration.md
integration/: index.html
netbox_napalm_plugin/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_napalm_plugin/api/: serializers.py  urls.py  views.py
netbox_napalm_plugin/migrations/: 0001_initial.py  0002_auto_20230215_1752.py
netbox_napalm_plugin/project-static/: build.mjs  package.json
netbox_napalm_plugin/project-static/js/: bs.ts  config.ts  lldp.ts  status.ts  util.ts
netbox_napalm_plugin/static/netbox_napalm_plugin/js/: config.js  lldp.js  status.js
netbox_napalm_plugin/templates/netbox_napalm_plugin/: config.html  lldp_neighbors.html  napalm.html  napalmplatformconfig.html  status.html
search/: search_index.json
tests/: __init__.py  test_netbox_napalm_plugin.py
