# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools>=63.2.0", "wheel", "setuptools_scm[toml]>=8.0"]

[project]
name =  "netbox_napalm_plugin"
authors = [
    {name = "Arthur Hanson", email = "ahanson@netboxlabs.com"},
]
description = "NetBox plugin for Napalm."
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

requires-python = ">=3.8.1"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "bandit[toml]==1.7.5",
    "black==23.3.0",
    "check-manifest==0.49",
    "flake8-bugbear==23.5.9",
    "flake8",
    "flake8-pyproject",
    "pre-commit==3.3.1",
    "pylint==2.17.4",
    "pytest-mock<3.10.1",
    "pytest-runner",
    "pytest==7.3.1",
    "pytest-github-actions-annotate-failures",
    "shellcheck-py==0.9.0.2"
]

[project.urls]
Documentation = "https://github.com/netbox-community/netbox_napalm/blob/main/README.md"
Source = "https://github.com/netbox-community/netbox_napalm"
Tracker = "https://github.com/netbox-community/netbox_napalm/issues"

[tool.bandit]
exclude_dirs = ["build","dist","tests","scripts","docs"]
number = 4
recursive = true
targets = "netbox_napalm_plugin"

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120

[tool.flake8]
max-line-length = 120
exclude = [
    ".eggs",
    ".venv",
    ".tox",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".github",
    ".git",
    "dist",
    "docs",
    "tests",
]
ignore = [
    "E722",
    "B001",
    "W503",
    "E203",
    "D100", # These are all for ignoring missing docstring
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "F401"  # unused import
]
